<resources>
    <string name="app_name">PMAG</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="google_button">Sign in with Google</string>
    <string name="register_button">Register</string>
    <string name="register_activity_or">OR</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="project_textview">Available Projects</string>
    <string name="tasks_textview">Tasks</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_board">Board</string>
    <string name="menu_task">Tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_project">Projects</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_name_text">Project name</string>
    <string name="hint_set_project_name">Project name</string>
    <string name="project_status">Project status</string>
    <string name="project_description">Project Description</string>
    <string name="fill_data_to_add_project">Fill required data to add project</string>
    <string name="project_tag" translatable="false">Project TAG</string>
    <string name="save_name">Save</string>
    <string name="set_as_default">Set Project as default</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="city_hint">City</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="add_button">Add</string>
    <string name="email_address_user_to_add">Email address user to add to project</string>
    <string name="assigned_projects">Project assigned to You</string>
    <string name="default_string">default</string>
    <string name="task_title">Title</string>
    <string name="description">Description</string>
    <string name="fill_data_to_add_task">Fill required data to add task</string>
    <string name="task_assigned_to_user">Assigned to user</string>
    <string name="created_by">Created by:</string>
    <string name="title_text_with_common">Title:</string>
    <string name="task_tag">Task TAG:</string>
    <string name="task_status">Tasks status</string>
    <string name="due_date">Due date</string>

    <string-array name="project_state_array">
        <item>Open</item>
        <item>In progress</item>
        <item>Presentation at the client\'s</item>
        <item>Finished</item>
    </string-array>

    <string-array name="task_state_array">
        <item>Open</item>
        <item>In progress</item>
        <item>Finished</item>
    </string-array>
</resources>
