<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.management.pmag.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_board"
            android:name="com.management.pmag.ui.board.BoardFragment"
            android:label="@string/menu_board" />

    <fragment
            android:id="@+id/nav_task"
            android:name="com.management.pmag.ui.task.TaskFragment"
            android:label="@string/menu_task" />

    <fragment
            android:id="@+id/nav_settings"
            android:name="com.management.pmag.ui.settings.SettingsFragment"
            android:label="@string/menu_settings"
            tools:layout="@layout/fragment_settings" />

    <fragment
            android:id="@+id/nav_project"
            android:name="com.management.pmag.ui.project.ProjectFragment"
            android:label="@string/menu_project"
            tools:layout="@layout/fragment_project" />
</navigation>