<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.project.details.ProjectDetailsActivity">

    <EditText
            android:id="@+id/editableProjectNameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_set_project_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.868"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/staticProjectTagId" />

    <TextView
            android:id="@+id/staticProjectTagId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:clickable="false"
            android:ems="10"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/projectNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/project_name_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editableProjectNameId"
            app:layout_constraintEnd_toStartOf="@+id/editableProjectNameId"
            app:layout_constraintStart_toStartOf="@+id/staticProjectTagId"
            app:layout_constraintTop_toTopOf="@+id/editableProjectNameId" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/project_status"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/projectStateSpinner"
            app:layout_constraintEnd_toStartOf="@+id/projectStateSpinner"
            app:layout_constraintStart_toStartOf="@+id/staticProjectTagId"
            app:layout_constraintTop_toTopOf="@+id/projectStateSpinner" />

    <Spinner
            android:id="@+id/projectStateSpinner"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/editableProjectNameId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editableProjectNameId" />

</androidx.constraintlayout.widget.ConstraintLayout>